@@ -1,57 +1,0 @@
-<!DOCTYPE html>
-<!--
-/*
- * INTER-Mediator
- * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
- * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
- *
- * INTER-Mediator is supplied under MIT License.
- * Please see the full license for details:
- * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
- */  -->
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>INTER-Mediator - Sample - Search/MySQL</title>
-    <link rel="stylesheet" type="text/css" href="../search.css">
-    <script type="text/javascript" src="search_def.php"></script>
-    <script type="text/javascript" src="search.js"></script>
-</head>
-<body>
-<div>
-    検索条件:
-    <input type="text" id="condition" data-im="_@condition">
-    表示件数：
-    <select type="text" id="number" data-im="_@_im_pagedSize">
-        <option value="4">4</option>
-        <option value="10">10</option>
-        <option value="40">40</option>
-    </select>
-    <button id="search">search</button>
-</div>
-<div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
-<table border="1" id="resultTable">
-    <thead>
-    <tr>
-        <th>郵便番号<span id="sort1a">▲</span><span id="sort1d">▼</span></th>
-        <th>都道府県</th>
-        <th>市区町村</th>
-        <th>町域名<span id="sort2a">▲</span><span id="sort2d">▼</span></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td><div data-im="postalcode@f3"></div></td>
-        <td><div data-im="postalcode@f7"></div></td>
-        <td><div data-im="postalcode@f8"></div></td>
-        <td><div data-im="postalcode@f9"></div></td>
-    </tr>
-    <tr data-im-control="noresult">
-        <td colspan="4">検索結果はありません。あるいは検索前です。</td>
-    </tr>
-    </tbody>
-</table>
-
-</body>
-</html>
