@@ -41,11 +41,9 @@
         <td>search</td>
         <td>
             <a href="Practices/search_page1.html">search(no JavaScript)</a><br>
-            <a href="Practices/search_page2.html">search(using JavaScript)</a>
         </td>
         <td>
             <a href="Practices/FileMaker/search_page1.html">search(no JavaScript)</a><br>
-            <a href="Practices/FileMaker/search_page2.html">search(using JavaScript)</a>
         </td>
         <td></td>
         <td></td>
