@@ -94,45 +94,6 @@ describe "INTER-Mediator-Server VM" do
     }
   end
 
-  it "Practice 'search(using JavaScript)' for MySQL/MariaDB should be working" do
-    @driver.navigate.to "http://" + @addr + "/INTER-Mediator/Samples/"
-    @wait.until {
-      element = @driver.find_element(:xpath, "//a[contains(@href, 'Practices/search_page2.html')]")
-      element.click
-      #@driver.navigate.to "http://" + @addr + "/INTER-Mediator/Samples/Practices/search_page2.html"
-      sleep 1
-      elements = @driver.find_elements(:xpath, "//div[@data-im='postalcode@f3']")
-      expect(elements.size).to eq(10)
-      expect(elements[0].text).to eq("1000000")
-      expect(elements[1].text).to eq("1020072")
-      expect(elements[9].text).to eq("1006802")
-
-      element = @driver.find_element(:id, "_im_progress")
-      expect(element.attribute("style")).to eq("opacity: 0; display: flex; z-index: -9999; transition-duration: 0.3s;")
-
-      Selenium::WebDriver::Support::Select.new(@driver.find_element(:xpath, "//select[@data-im='_@pagedSize']")).select_by(:value, "4")
-      sleep 1
-      elements = @driver.find_elements(:xpath, "//div[@data-im='postalcode@f3']")
-      expect(elements.size).to eq(4)
-      element = @driver.find_element(:xpath, "//span[@class='IM_NAV_info']")
-      expect(element.text).to eq("Record #1-4 / 3654")
-
-      Selenium::WebDriver::Support::Select.new(@driver.find_element(:xpath, "//select[@data-im='_@pagedSize']")).select_by(:value, "10")
-      sleep 1
-      elements = @driver.find_elements(:xpath, "//div[@data-im='postalcode@f3']")
-      expect(elements.size).to eq(10)
-      element = @driver.find_element(:xpath, "//span[@class='IM_NAV_info']")
-      expect(element.text).to eq("Record #1-10 / 3654")
-
-      Selenium::WebDriver::Support::Select.new(@driver.find_element(:xpath, "//select[@data-im='_@pagedSize']")).select_by(:value, "40")
-      sleep 1
-      elements = @driver.find_elements(:xpath, "//div[@data-im='postalcode@f3']")
-      expect(elements.size).to eq(30)
-      element = @driver.find_element(:xpath, "//span[@class='IM_NAV_info']")
-      expect(element.text).to eq("Record #1-30 / 3654")
-    }
-  end
-
   it "Sample 'file upload' for MySQL/MariaDB should be working" do
     @driver.navigate.to "http://" + @addr + "/INTER-Mediator/Samples/"
     @wait.until {
